--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@capacitor/android": "6.0.0",
+    "@capacitor/core": "^6.0.0",
     "flowbite": "^2.3.0",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vue-toast-notification": "^3.1.2"
   },
   "devDependencies": {
+    "@capacitor/cli": "^6.0.0",
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^20.12.5",
@@ -35,6 +39,7 @@
     "typescript": "~5.4.0",
     "vite": "^5.2.8",
     "vite-plugin-vue-devtools": "^7.0.25",
+    "vue-the-mask": "^0.11.1",
     "vue-tsc": "^2.0.11"
   }
 }
