--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@capacitor/android": "6.0.0",
     "@capacitor/core": "^6.0.0",
     "flowbite": "^2.3.0",
+    "smask": "^3.0.4",
     "vanilla-masker": "^1.2.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
