#sistema de autenticação

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_APP_MODE = 'dev_2' #prod ou dev[_2]
+VITE_APP_MODE = 'dev' #prod ou dev[_2]
 
 VITE_BACKEND_HOST_DEV = 'http://192.168.3.24:8000/api'
 VITE_BACKEND_HOST_DEV_2 = 'http://127.0.0.1:8000/api'
