--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@capacitor/core": "^6.0.0",
     "axios": "^1.6.8",
     "flowbite": "^2.3.0",
+    "js-cookie": "^3.0.5",
     "smask": "^3.0.4",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
