--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.8",
     "flowbite": "^2.3.0",
     "js-cookie": "^3.0.5",
+    "moment": "^2.30.1",
     "smask": "^3.0.4",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
