--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.30.1",
     "smask": "^3.0.4",
     "vue": "^3.4.21",
+    "vue-multiselect": "^3.0.0",
     "vue-router": "^4.3.0",
     "vue-toast-notification": "^3.1.2",
     "vuex": "^4.0.2"
